tests/fixtures/positive/code-style/ProhibitSuppressWarnings_CommentWithSuppressText.cls
// Valid: Comment containing @SuppressWarnings but not an annotation
public class Example4 {
    // @SuppressWarnings annotation should not be used
    public void method() {
        int value = 42;
    }
}

